test/files/neg/tcpoly_ticket2101.check
tcpoly_ticket2101.scala:2: error: type arguments [T2,X] do not conform to class T's type parameter bounds [A[Y] <: T[A,B],B]
class T2[X] extends T[T2, X] // ill-typed
                    ^
<<<<<<< HEAD
one error found
=======
one error found
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
